<resources>
    <string name="app_name">GestionClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nom</string>
    <string name="add">Ajouter</string>
    <string name="firstname">Prénom</string>
    <string name="email">Email</string>
    <string name="sexe">Sexe</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="age">Age</string>
    <string name="active">Actif</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="level">Niveau</string>
    <string name="client_added">Client %1$s ajouté</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="addClient">Ajouter un client</string>
    <string name="listClients">Lister les clients</string>
    <string name="title_activity_list_clients">ListClientsActivity</string>
    <string name="title_activity_details_client">DetailsClientActivity</string>
</resources>
