<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout  android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AddClientActivity">


    <TextView
        style="@style/ClientTextView"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        style="@style/ClientTextView.Bold"/>

    <TextView
        style="@style/ClientTextView"
        android:text="@string/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstnameTextView" />

    <TextView
        style="@style/ClientTextView"
        android:text="@string/sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sexeTextView" />

    <TextView
        style="@style/ClientTextView"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView" />

    <TextView
        style="@style/ClientTextView"
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ageTextView" />

    <TextView
        style="@style/ClientTextView"
        android:text="@string/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/levelTextView" />

    <TextView
        style="@style/ClientTextView"
        android:text="@string/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ClientTextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activeTextView" />

</LinearLayout>

</ScrollView>